--- a/api/package.json
+++ b/api/package.json
@@ -37,7 +37,9 @@
     "@nestjs/platform-express": "^9.4.0",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/body-parser": "^1.19.4",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cache-manager": "^5.2.0",
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
