--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,9 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
+    "start:pm2": "pm2 start dist/src/main.js  --name node_server -i max",
+    "stop:pm2": "pm2 stop dist/src/main.js  --name node_server -i max",
     "lint": "npm run type-check && eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "lint-ci": "npm run type-check && eslint \"{src,apps,libs,test}/**/*.ts\"",
     "pretest": "npm run lint-ci",
