--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "author": "",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -13,8 +13,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main",
-    "start:pm2": "pm2 start dist/src/main.js  --name node_server -i max",
-    "stop:pm2": "pm2 stop dist/src/main.js  --name node_server -i max",
+    "pm2:start": "pm2 start dist/src/main.js  --name node_server -i max",
+    "pm2:stop": "pm2 stop dist/src/main.js  --name node_server -i max",
     "lint": "npm run type-check && eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "lint-ci": "npm run type-check && eslint \"{src,apps,libs,test}/**/*.ts\"",
     "pretest": "npm run lint-ci",
