--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       POSTGRES_PASSWORD: secret
       POSTGRES_DB: api
     volumes:
-      - ./.data/db:/var/lib/postgresql/data
+      - ./.docker/data/db:/var/lib/postgresql/data
     ports:
       - "5432:5432"
 
@@ -18,7 +18,7 @@ services:
   redis:
     build: ./redis
     volumes:
-      - ./.data/redis:/data
+      - ./.docker/data/redis:/data
     ports:
       - "6379:6379"
 
