--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,12 @@
 PORT=9797
 
 # DB
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=secret
-DB_NAME=api
+DB_TYPE=mysql
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWORD=secret
+MYSQL_DB=api
 
 JWT_SECRET=secret
 
