--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "api",
-  "version": "0.0.2",
+  "name": "nest-api",
+  "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
