--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3.8'
 
 networks:
-  midway-ssr-net:
+ nest-ssr-net:
     driver: bridge
 services:
 
   # ### DB ################################################
   # postgresql:
   #   restart: always
-  #   container_name: v_postgresql_midway_stock
+  #   container_name: v_postgresql_nest_api
   #   #image: arm64v8/postgres:latest
   #   image: postgres:latest
   #   ports:
@@ -24,13 +24,13 @@ services:
   #   #   timeout: 20s
   #   #   retries: 3
   #   networks:
-  #     - midway-ssr-net
+  #     -nest-ssr-net
 
   ### Redis ################################################
   redis:
       image: arm64v8/redis:latest
       # image: redis:latest
-      container_name: v_redis_midway_stock
+      container_name: v_redis_nest_api
       command:
         - /bin/sh
         - -c
@@ -51,12 +51,12 @@ services:
       volumes:
         - /.docker/redis:/data
       networks:
-        - midway-ssr-net
+        -nest-ssr-net
   
   mysql:
     image: mysql:8.4.2
     restart: always
-    container_name: v_mysql_midway_stock
+    container_name: v_mysql_nest_api
     volumes:
       - ./.docker/data/mysql:/var/lib/mysql # 挂载目录，持久化存储
     ports:
@@ -68,7 +68,7 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD} # 设置专用用户密码
       MYSQL_DATABASE: ${MYSQL_DB} # 自动创建数据库
     networks:
-      - midway-ssr-net
+      -nest-ssr-net
     ### Mail trap ################################################
   mailhog:
     image: mailhog/mailhog
