fix(db): 更新目录结构

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
     "noFallthroughCasesInSwitch": false,
     "strictNullChecks": true,
     "noImplicitAny": true,
-    "strictBindCallApply": true
+    "strictBindCallApply": true,
+    "paths": {
+      "@/*": ["src/*"],
+    }
   }
 }
