--- a/package.json
+++ b/package.json
@@ -54,9 +54,12 @@
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "husky": "^9.1.7",
     "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.3",
+    "mysql2": "^3.14.0",
     "nodemailer": "^6.9.16",
     "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.6.0",
@@ -79,6 +82,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cache-manager": "^4.0.6",
     "@types/cache-manager-redis-store": "^2.0.4",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^4.17.21",
     "@types/jest": "^27.5.2",
     "@types/jsonwebtoken": "^9.0.7",
